@@ -1,17 +1,18 @@
 /*
- * MegaMek - Copyright (C) 2000,2001,2002,2003,2004,2005 Ben Mazur
- * (bmazur@sev.org)
- *
- * This program is free software; you can redistribute it and/or modify it under
- * the terms of the GNU General Public License as published by the Free Software
- * Foundation; either version 2 of the License, or (at your option) any later
- * version.
- *
- * This program is distributed in the hope that it will be useful, but WITHOUT
- * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
- * FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
- * details.
- */
+* MegaMek -
+* Copyright (C) 2000, 2001, 2002, 2003, 2004, 2005 Ben Mazur (bmazur@sev.org)
+* Copyright (C) 2018 The MegaMek Team
+*
+* This program is free software; you can redistribute it and/or modify it under
+* the terms of the GNU General Public License as published by the Free Software
+* Foundation; either version 2 of the License, or (at your option) any later
+* version.
+*
+* This program is distributed in the hope that it will be useful, but WITHOUT
+* ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+* FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
+* details.
+*/
 
 package megamek.common;
 
@@ -85,7 +86,7 @@ public abstract class Mech extends Entity {
     public static final int ACTUATOR_LOWER_LEG = 13;
 
     public static final int ACTUATOR_FOOT = 14;
-    
+
     public static final String systemNames[] = { "Life Support", "Sensors",
             "Cockpit", "Engine", "Gyro", null, null, "Shoulder", "Upper Arm",
             "Lower Arm", "Hand", "Hip", "Upper Leg", "Lower Leg", "Foot"};
@@ -164,11 +165,11 @@ public abstract class Mech extends Entity {
     public static final int COCKPIT_TRIPOD = 10;
 
     public static final int COCKPIT_INTERFACE = 11;
-    
+
     public static final int COCKPIT_VRRP = 12;
-    
+
     public static final int COCKPIT_QUADVEE = 13;
-    
+
     public static final int COCKPIT_SUPERHEAVY_INDUSTRIAL = 14;
 
     public static final String[] COCKPIT_STRING = { "Standard Cockpit",
@@ -176,7 +177,7 @@ public abstract class Mech extends Entity {
             "Dual Cockpit", "Industrial Cockpit", "Primitive Cockpit",
             "Primitive Industrial Cockpit", "Superheavy Cockpit",
             "Superheavy Tripod Cockpit", "Tripod Cockpit", "Interface Cockpit",
-            "Virtual Reality Piloting Pod", "QuadVee Cockpit", 
+            "Virtual Reality Piloting Pod", "QuadVee Cockpit",
             "Superheavy Industrial Cockpit" };
 
     public static final String[] COCKPIT_SHORT_STRING = { "Standard", "Small",
@@ -281,7 +282,7 @@ public abstract class Mech extends Entity {
 
     // Cooling System Flaws quirk
     private boolean coolingFlawActive = false;
-    
+
     // QuadVees, LAMs, and tracked 'Mechs can change movement mode.
     protected EntityMovementMode originalMovementMode = EntityMovementMode.BIPED;
 
@@ -332,7 +333,7 @@ public abstract class Mech extends Entity {
         // ejection systems are disabled by default or not.
         autoEject = !PreferenceManager.getClientPreferences()
                 .defaultAutoejectDisabled();
-        
+
         switch (inCockpitType) {
         case COCKPIT_TRIPOD:
             setCrew(new Crew(CrewType.TRIPOD));
@@ -350,6 +351,11 @@ public abstract class Mech extends Entity {
             setCrew(new Crew(CrewType.QUADVEE));
             break;
         }
+    }
+
+    @Override
+    public int getUnitType() {
+        return UnitType.MEK;
     }
 
     /**
@@ -498,6 +504,41 @@ public abstract class Mech extends Entity {
         } else {
             addTransporter(new ClampMountMech());
         }
+    }
+
+    public void setProtomechClampMounts() {
+        boolean front = false;
+        boolean rear = false;
+        for (Transporter t: getTransports()) {
+            if (t instanceof ProtomechClampMount) {
+                front |= !((ProtomechClampMount) t).isRear();
+                rear |= ((ProtomechClampMount) t).isRear();
+            }
+        }
+        if (!front) {
+            addTransporter(new ProtomechClampMount(false));
+        }
+        if (!rear) {
+            addTransporter(new ProtomechClampMount(true));
+        }
+    }
+
+    @Override
+    public void load(Entity unit, boolean checkElev, int bayNumber) {
+        if (unit.hasETypeFlag(Entity.ETYPE_PROTOMECH)) {
+            boolean rear = bayNumber > 0;
+            for (Transporter t : getTransports()) {
+                if ((t instanceof ProtomechClampMount)
+                        && t.canLoad(unit)
+                        && (!checkElev || (unit.getElevation() == getElevation()))
+                        && (((ProtomechClampMount) t).isRear() == rear)) {
+                    t.load(unit);
+                    unit.setTargetBay(-1);
+                    return;
+                }
+            }
+        }
+        super.load(unit, checkElev, bayNumber);
     }
 
     /**
@@ -1051,6 +1092,10 @@ public abstract class Mech extends Entity {
                 - (hasMPReducingHardenedArmor() ? 1 : 0);
     }
 
+    /**
+     * @return The mech's run MP without MASC or supercharger, but with any reduction
+     *         due to hardened armor.
+     */
     public int getOriginalRunMPwithoutMASC() {
         return super.getOriginalRunMP()
                 - (hasMPReducingHardenedArmor() ? 1 : 0);
@@ -1221,11 +1266,13 @@ public abstract class Mech extends Entity {
                 }
             }
         }
+        // Medium shield reduces jump mp by 1/shield
+        jump -= getNumberOfShields(MiscType.S_SHIELD_MEDIUM);
 
         if (hasModularArmor() && !ignoremodulararmor) {
             jump--;
         }
-
+        
         if (gravity) {
             return Math.max(applyGravityEffectsOnMP(jump), 0);
         }
@@ -1242,8 +1289,7 @@ public abstract class Mech extends Entity {
     public int getPartialWingJumpBonus(Mounted mount) {
         int bonus = 0;
         if (game != null) {
-            if ((getWeightClass() == EntityWeightClass.WEIGHT_LIGHT)
-                    || (getWeightClass() == EntityWeightClass.WEIGHT_MEDIUM)) {
+            if ((getWeightClass() <= EntityWeightClass.WEIGHT_MEDIUM)) {
                 switch (game.getPlanetaryConditions().getAtmosphere()) {
                     case PlanetaryConditions.ATMO_VACUUM:
                         bonus = 0;
@@ -1267,9 +1313,7 @@ public abstract class Mech extends Entity {
                     default:
                         bonus = 2;
                 }
-            }
-            if ((getWeightClass() == EntityWeightClass.WEIGHT_HEAVY)
-                    || (getWeightClass() == EntityWeightClass.WEIGHT_ASSAULT)) {
+            } else {
                 switch (game.getPlanetaryConditions().getAtmosphere()) {
                     case PlanetaryConditions.ATMO_VACUUM:
                         bonus = 0;
@@ -1294,8 +1338,7 @@ public abstract class Mech extends Entity {
                 }
             }
         } else {
-            if ((getWeightClass() == EntityWeightClass.WEIGHT_LIGHT)
-                    || (getWeightClass() == EntityWeightClass.WEIGHT_MEDIUM)) {
+            if ((getWeightClass() <= EntityWeightClass.WEIGHT_MEDIUM)) {
                 bonus = 2;
             } else {
                 bonus = 1;
@@ -1458,13 +1501,13 @@ public abstract class Mech extends Entity {
 
         return jump;
     }
-    
+
     @Override
     public boolean isEligibleForPavementBonus() {
         //eligible if using Mech tracks
         return movementMode == EntityMovementMode.TRACKED;
     }
-    
+
     @Override
     public EntityMovementMode nextConversionMode(EntityMovementMode afterMode) {
         if (hasTracks() && afterMode != EntityMovementMode.TRACKED) {
@@ -1473,12 +1516,12 @@ public abstract class Mech extends Entity {
             return originalMovementMode;
         }
     }
-        
+
     /**
      * QuadVees and LAMs may not have to make PSRs to avoid falling depending on their mode,
      * and Mechs using tracks for movement do not have to make PSRs for damage to gyro or leg
      * actuators.
-     * 
+     *
      * @param gyroLegDamage Whether the PSR is due to damage to gyro or leg actuators
      * @return              true if the Mech can fall due to failed PSR.
      */
@@ -1486,7 +1529,7 @@ public abstract class Mech extends Entity {
     public boolean canFall(boolean gyroLegDamage) {
         return !isProne() && !(gyroLegDamage && movementMode == EntityMovementMode.TRACKED);
     }
-    
+
     /**
      * Return the height of this mech above the terrain.
      */
@@ -1666,7 +1709,7 @@ public abstract class Mech extends Entity {
     public int getHeatCapacity() {
         return getHeatCapacity(true, true);
     }
-    
+
     @Override
     public int getHeatCapacity(boolean radicalHeatSink) {
         return getHeatCapacity(true, radicalHeatSink);
@@ -1729,7 +1772,7 @@ public abstract class Mech extends Entity {
                                             // once.
             }
         }
-        // AirMech mode for LAMs confers the same heat benefits as a partial wing. 
+        // AirMech mode for LAMs confers the same heat benefits as a partial wing.
         if (includePartialWing && movementMode == EntityMovementMode.WIGE) {
             capacity += getPartialWingHeatBonus();
         }
@@ -1788,6 +1831,11 @@ public abstract class Mech extends Entity {
             }
         }
         return sinksUnderwater;
+    }
+    
+    @Override
+    public boolean tracksHeat() {
+        return true;
     }
 
     /**
@@ -2011,6 +2059,10 @@ public abstract class Mech extends Entity {
         if ((mounted.getType() instanceof WeaponType)
                 && mounted.getType().hasFlag(WeaponType.F_B_POD)) {
             return Compute.ARC_360;
+        }
+        // VGLs base arc on their facing
+        if (mounted.getType().hasFlag(WeaponType.F_VGL)) {
+            return Compute.firingArcFromVGLFacing(mounted.getFacing());
         }
         // rear mounted?
         if (mounted.isRearMounted()) {
@@ -2904,7 +2956,7 @@ public abstract class Mech extends Entity {
             }
         }
     }
-    
+
     public Mounted addEquipment(EquipmentType etype, EquipmentType etype2,
             int loc,  boolean omniPod) throws LocationFullException {
         Mounted mounted = new Mounted(this, etype);
@@ -3021,7 +3073,7 @@ public abstract class Mech extends Entity {
             }
         }
     }
-  
+
     //From IO pg 50
     public static TechAdvancement getTechAdvancement(long etype, boolean primitive, boolean industrial, int weightClass) {
         if ((etype & ETYPE_TRIPOD_MECH) != 0) {
@@ -3077,12 +3129,12 @@ public abstract class Mech extends Entity {
                     .setStaticTechLevel(SimpleTechLevel.INTRO);
         }
     }
-    
+
     @Override
     public TechAdvancement getConstructionTechAdvancement() {
         return getTechAdvancement(getEntityType(), isPrimitive(), isIndustrial(), getWeightClass());
     }
-    
+
     private final static TechAdvancement[] GYRO_TA =  {
             new TechAdvancement(TECH_BASE_ALL).setAdvancement(2300, 2350, 2505)
                 .setApproximate(true, false, false).setPrototypeFactions(F_TA)
@@ -3114,7 +3166,7 @@ public abstract class Mech extends Entity {
                 .setAvailability(RATING_X, RATING_F, RATING_F, RATING_F)
                 .setStaticTechLevel(SimpleTechLevel.ADVANCED), //Superheavy
     };
-    
+
     private final static TechAdvancement[] COCKPIT_TA = {
             new TechAdvancement(TECH_BASE_ALL).setAdvancement(2468, 2470, 2487)
                 .setApproximate(true, false, false).setTechRating(RATING_D)
@@ -3137,7 +3189,7 @@ public abstract class Mech extends Entity {
             new TechAdvancement(TECH_BASE_ALL).setISAdvancement(3053, 3080, 3100)
                 .setClanAdvancement(3055, 3080, 3100)
                 .setPrototypeFactions(F_FS, F_LC, F_CSJ).setProductionFactions(F_LC)
-                .setApproximate(false, true, false).setTechRating(RATING_D) 
+                .setApproximate(false, true, false).setTechRating(RATING_D)
                 .setAvailability(RATING_X, RATING_X, RATING_F, RATING_F)
                 .setStaticTechLevel(SimpleTechLevel.EXPERIMENTAL), //Torso mounted
             //FIXME: Dual is unofficial; these are stats for standard
@@ -3195,7 +3247,7 @@ public abstract class Mech extends Entity {
                 .setAvailability(RATING_X, RATING_F, RATING_F, RATING_F)
                 .setStaticTechLevel(SimpleTechLevel.ADVANCED), //Superheavy industrial
     };
-    
+
     // Advanced fire control for industrial mechs is implemented with a standard cockpit,
     // but the tech progression is different.
     public static TechAdvancement getIndustrialAdvFireConTA() {
@@ -3212,14 +3264,14 @@ public abstract class Mech extends Entity {
         }
         return null;
     }
-    
+
     public TechAdvancement getCockpitTechAdvancement() {
         if (isIndustrial() && (getCockpitType() == COCKPIT_STANDARD)) {
             return getIndustrialAdvFireConTA();
         }
         return getCockpitTechAdvancement(getCockpitType());
     }
-    
+
     public static TechAdvancement getGyroTechAdvancement(int gyroType) {
         if ((gyroType >= 0) && (gyroType < GYRO_TA.length)) {
             return new TechAdvancement(GYRO_TA[gyroType]);
@@ -3230,7 +3282,7 @@ public abstract class Mech extends Entity {
     public TechAdvancement getGyroTechAdvancement() {
         return getGyroTechAdvancement(getGyroType());
     }
-    
+
     public static TechAdvancement getFullHeadEjectAdvancement() {
         return new TechAdvancement(TECH_BASE_ALL).setISAdvancement(3020, 3023, 3100)
                 .setClanAdvancement(DATE_NONE, 3052, 3100).setPrototypeFactions(F_LC)
@@ -3260,13 +3312,12 @@ public abstract class Mech extends Entity {
         //    techAdvancement.setTechRating(Math.max(techAdvancement.getTechRating(), RATING_F));
         //}
     }
-    
+
     /**
      * This method will return the number of contiguous criticals in the given
      * location, starting at the given critical slot
      *
-     * @param unit          Unit to check critical slots on
-     * @param location      The location on the unit to check slots on
+     * @param loc           The location on the unit to check slots on
      * @param startingSlot  The critical slot to start at
      * @return
      */
@@ -3675,7 +3726,7 @@ public abstract class Mech extends Entity {
                             || etype.hasFlag(MiscType.F_EMERGENCY_COOLANT_SYSTEM))) {
                 toSubtract = 1;
             }
-            
+
             if (etype instanceof AmmoType
                     && ((AmmoType)mounted.getType()).getAmmoType() == AmmoType.T_COOLANT_POD) {
                 toSubtract = 1;
@@ -4954,7 +5005,7 @@ public abstract class Mech extends Entity {
                 // Ammo with no matching weapons counts 0, unless it's a coolant
                 // pod
                 // because coolant pods have no matching weapon
-                if (key.equals(new Integer(AmmoType.T_COOLANT_POD).toString()
+                if (key.equals(Integer.valueOf(AmmoType.T_COOLANT_POD).toString()
                         + "1")) {
                     ammoBV += ammo.get(key);
                 }
@@ -5266,7 +5317,7 @@ public abstract class Mech extends Entity {
             cockpitCost = 200000;
         }
         if (hasEiCockpit()
-                && ((null != getCrew()) && getCrew().getOptions().booleanOption(OptionsConstants.UNOFF_EI_IMPLANT))) {
+                && ((null != getCrew()) && hasAbility(OptionsConstants.UNOFF_EI_IMPLANT))) {
             cockpitCost = 400000;
         }
         costs[i++] = cockpitCost;
@@ -5346,7 +5397,7 @@ public abstract class Mech extends Entity {
 
         double weaponCost = getWeaponsAndEquipmentCost(ignoreAmmo);
         costs[i++] = weaponCost;
-        
+
         if (this instanceof LandAirMech) {
             costs[i++] = (structureCost + weaponCost)
                     * (((LandAirMech)this).getLAMType() == LandAirMech.LAM_BIMODAL? 0.65 : 0.75);
@@ -5355,12 +5406,12 @@ public abstract class Mech extends Entity {
         } else {
             costs[i++] = 0;
         }
-        
+
         double cost = 0; // calculate the total
         for (int x = 0; x < i; x++) {
             cost += costs[x];
         }
-                        
+
         double quirkMultiplier = 0;
         if (hasQuirk(OptionsConstants.QUIRK_POS_GOOD_REP_1)) {
         	quirkMultiplier = 1.1f;
@@ -5370,7 +5421,7 @@ public abstract class Mech extends Entity {
         	cost *= quirkMultiplier;
         }
         costs[i++] = -quirkMultiplier; // negative just marks it as multiplier
- 
+
         double omniMultiplier = 0;
         if (isOmni()) {
             omniMultiplier = 1.25f;
@@ -5387,7 +5438,7 @@ public abstract class Mech extends Entity {
         addCostDetails(cost, costs);
         return cost;
     }
-    
+
     @Override
     protected int implicitClanCASE() {
         if (!isClan()) {
@@ -5562,15 +5613,15 @@ public abstract class Mech extends Entity {
         }
 
         // VDNI bonus?
-        if (getCrew().getOptions().booleanOption(OptionsConstants.MD_VDNI)
-                && !getCrew().getOptions().booleanOption(OptionsConstants.MD_BVDNI)) {
+        if (hasAbility(OptionsConstants.MD_VDNI)
+                && !hasAbility(OptionsConstants.MD_BVDNI)) {
             roll.addModifier(-1, "VDNI");
         }
 
         // Small/torso-mounted cockpit penalty?
         if ((getCockpitType() == Mech.COCKPIT_SMALL)
-                && (!getCrew().getOptions().booleanOption(OptionsConstants.MD_BVDNI)
-                && !getCrew().getOptions().booleanOption(OptionsConstants.UNOFF_SMALL_PILOT))) {
+                && (!hasAbility(OptionsConstants.MD_BVDNI)
+                && !hasAbility(OptionsConstants.UNOFF_SMALL_PILOT))) {
             roll.addModifier(1, "Small Cockpit");
         } else if (getCockpitType() == Mech.COCKPIT_TORSO_MOUNTED) {
             roll.addModifier(1, "Torso-Mounted Cockpit");
@@ -5594,7 +5645,7 @@ public abstract class Mech extends Entity {
             }
         }
 
-        if (hasQuirk(OptionsConstants.QUIRK_NEG_CRAMPED_COCKPIT) && !getCrew().getOptions().booleanOption(OptionsConstants.UNOFF_SMALL_PILOT)) {
+        if (hasQuirk(OptionsConstants.QUIRK_NEG_CRAMPED_COCKPIT) && !hasAbility(OptionsConstants.UNOFF_SMALL_PILOT)) {
             roll.addModifier(1, "cramped cockpit");
         }
 
@@ -6523,7 +6574,7 @@ public abstract class Mech extends Entity {
         sb.append(newLine);
         sb.append(newLine);
 
-        Double tonnage = new Double(weight);
+        Double tonnage = Double.valueOf(weight);
         sb.append("Mass:").append(tonnage.intValue()).append(newLine);
         sb.append("Engine:");
         if(hasEngine()) {
@@ -6551,7 +6602,7 @@ public abstract class Mech extends Entity {
             sb.append("Standard");
         }
         sb.append(newLine);
-        
+
         if (this instanceof LandAirMech) {
             sb.append("LAM:");
             sb.append(((LandAirMech)this).getLAMTypeString());
@@ -6691,11 +6742,43 @@ public abstract class Mech extends Entity {
             sb.append(newLine);
         }
 
+        if (getFluff().getManufacturer().trim().length() > 0) {
+            sb.append("manufacturer:");
+            sb.append(getFluff().getManufacturer());
+            sb.append(newLine);
+        }
+
+        if (getFluff().getPrimaryFactory().trim().length() > 0) {
+            sb.append("primaryFactory:");
+            sb.append(getFluff().getPrimaryFactory());
+            sb.append(newLine);
+        }
+
+        if (getFluff().getNotes().trim().length() > 0) {
+            sb.append("notes:");
+            sb.append(getFluff().getNotes());
+            sb.append(newLine);
+        }
 
         if (getFluff().getMMLImagePath().trim().length() > 0) {
             sb.append("imagefile:");
             sb.append(getFluff().getMMLImagePath());
             sb.append(newLine);
+        }
+
+        for (EntityFluff.System system : EntityFluff.System.values()) {
+        	if (getFluff().getSystemManufacturer(system).length() > 0) {
+        		sb.append("systemmanufacturer:");
+        		sb.append(system.toString()).append(":");
+        		sb.append(getFluff().getSystemManufacturer(system));
+        		sb.append(newLine);
+        	}
+        	if (getFluff().getSystemModel(system).length() > 0) {
+        		sb.append("systemmodel:");
+        		sb.append(system.toString()).append(":");
+        		sb.append(getFluff().getSystemModel(system));
+        		sb.append(newLine);
+        	}
         }
 
         if (getUseManualBV()) {
@@ -6712,7 +6795,7 @@ public abstract class Mech extends Entity {
             return MtfFile.EMPTY;
         }
         int type = cs.getType();
-        int index = cs.getIndex();        
+        int index = cs.getIndex();
         String armoredText = "";
 
         if (cs.isArmored()) {
@@ -7047,10 +7130,10 @@ public abstract class Mech extends Entity {
         }
         return success;
     }
-    
+
     /**
      * Determines which crew slot is associated with a particular cockpit critical.
-     * 
+     *
      * @param cs    A cockpit critical slot
      * @return      The crew slot index associated with this critical slot, or -1 to indicate the entire crew.
      */
@@ -7071,7 +7154,7 @@ public abstract class Mech extends Entity {
         }
         return -1;
     }
-    
+
     @Override
     public boolean hasCommandConsoleBonus() {
         return getCockpitType() == COCKPIT_COMMAND_CONSOLE
@@ -7912,7 +7995,7 @@ public abstract class Mech extends Entity {
         if (hasMPReducingHardenedArmor()) {
             move--;
         }
-        
+
         if (getMisc().stream().filter(m -> m.getType().hasFlag(MiscType.F_CLUB))
         		.map(m -> m.getType().getSubType())
         		.anyMatch(st -> st == MiscType.S_SHIELD_LARGE || st == MiscType.S_SHIELD_MEDIUM)) {
@@ -7920,7 +8003,7 @@ public abstract class Mech extends Entity {
         }
         return move;
     }
-    
+
     @Override
     /*
      * returns the battle force structure points for a mech
@@ -8021,12 +8104,12 @@ public abstract class Mech extends Entity {
         return battleForceStructure;
 
     }
-    
+
     @Override
     public int getNumBattleForceWeaponsLocations() {
         return 2;
     }
-    
+
     @Override
     public double getBattleForceLocationMultiplier(int index, int location, boolean rearMounted) {
         if ((index == 0 && !rearMounted
@@ -8043,12 +8126,12 @@ public abstract class Mech extends Entity {
         }
         return "";
     }
-    
+
     @Override
     public boolean isBattleForceRearLocation(int index) {
         return index == 1;
     }
-    
+
     @Override
     public int getBattleForceTotalHeatGeneration(boolean allowRear) {
         int totalHeat = 0;
@@ -8070,7 +8153,7 @@ public abstract class Mech extends Entity {
             if (weapon.getAmmoType() == AmmoType.T_AC_ROTARY) {
                 totalHeat += weapon.getHeat() * 6;
             } else if (weapon.getAmmoType() == AmmoType.T_AC_ULTRA
-                    || weapon.getAmmoType() == AmmoType.T_AC_ULTRA_THB) {                
+                    || weapon.getAmmoType() == AmmoType.T_AC_ULTRA_THB) {
                 totalHeat += weapon.getHeat() * 2;
             } else {
                 totalHeat += weapon.getHeat();
@@ -8081,7 +8164,7 @@ public abstract class Mech extends Entity {
             totalHeat += 10;
         }
 
-        return totalHeat;        
+        return totalHeat;
     }
 
     @Override
@@ -8134,7 +8217,7 @@ public abstract class Mech extends Entity {
             specialAbilities.put(BattleForceSPA.SOA, null);
         }
     }
-    
+
     public abstract boolean hasMPReducingHardenedArmor();
 
     /**
@@ -8157,7 +8240,7 @@ public abstract class Mech extends Entity {
         return getHitCriticals(CriticalSlot.TYPE_SYSTEM, Mech.SYSTEM_GYRO,
                 Mech.LOC_CT);
     }
-    
+
     @Override
     public boolean isGyroDestroyed() {
         if (getGyroType() == GYRO_HEAVY_DUTY) {
@@ -8667,6 +8750,7 @@ public abstract class Mech extends Entity {
         return super.getInternal(loc);
     }
 
+    @Override
     public boolean isSuperHeavy() {
         return weight > 100;
     }
@@ -8780,9 +8864,9 @@ public abstract class Mech extends Entity {
                         && crit.isHittable()
                         && (crit.getType() == CriticalSlot.TYPE_SYSTEM)
                         && (crit.getIndex() == Mech.SYSTEM_ENGINE)) {
-                        vCriticals.put(new Integer(loc),
+                        vCriticals.put(Integer.valueOf(loc),
                                 new LinkedList<CriticalSlot>());
-                        vCriticals.get(new Integer(loc)).add(crit);
+                        vCriticals.get(Integer.valueOf(loc)).add(crit);
                         found = true;
                         break;
                     }
@@ -8795,9 +8879,9 @@ public abstract class Mech extends Entity {
                             && crit.isHittable()
                             && (crit.getType() == CriticalSlot.TYPE_SYSTEM)
                             && (crit.getIndex() == Mech.SYSTEM_ENGINE)) {
-                            vCriticals.put(new Integer(loc),
+                            vCriticals.put(Integer.valueOf(loc),
                                     new LinkedList<CriticalSlot>());
-                            vCriticals.get(new Integer(loc)).add(crit);
+                            vCriticals.get(Integer.valueOf(loc)).add(crit);
                             break;
                         }
                     }
