@@ -224,14 +224,23 @@ public class TestMech extends TestEntity {
     public boolean isAdvancedAerospace() {
         return false;
     }
+    
+    @Override
+    public boolean isProtomech() {
+        return false;
+    }
 
     @Override
     public double getWeightMisc() {
-        if (mech instanceof LandAirMech || mech instanceof QuadVee) {
-            // 10% of weight is conversion equipment
-            return Math.ceil(mech.getWeight() / 10);
+        // LAM/QuadVee equipment is 10% of mass, rounded up to whole number (15% for bimodal LAM).
+        // IO p. 113 (LAM), 134 (QV)
+        if (mech instanceof LandAirMech) {
+            return Math.ceil(mech.getWeight()) *
+                    (((LandAirMech) mech).getLAMType() == LandAirMech.LAM_BIMODAL ? 0.15 : 0.1);
+        } else if (mech instanceof QuadVee) {
+            return Math.ceil(mech.getWeight() * 0.1);
         }
-        return 0.0f;
+        return 0.0;
     }
 
     @Override
@@ -536,8 +545,8 @@ public class TestMech extends TestEntity {
         }
 
         allocation.addElement(mounted);
-        allocation.addElement(new Integer(criticals));
-        allocation.addElement(new Integer(count));
+        allocation.addElement(Integer.valueOf(criticals));
+        allocation.addElement(Integer.valueOf(count));
         return false;
     }
 
@@ -603,7 +612,7 @@ public class TestMech extends TestEntity {
                         .integralHeatSinkCapacity(mech.hasCompactHeatSinks()))
                         && (countInternalHeatSinks != ((Mech) entity)
                                 .heatSinks()) && !entity.isOmni())) {
-            heatSinks.addElement(new Integer(countInternalHeatSinks));
+            heatSinks.addElement(Integer.valueOf(countInternalHeatSinks));
         }
         return legal;
     }
@@ -730,7 +739,7 @@ public class TestMech extends TestEntity {
     public boolean correctMovement(StringBuffer buff) {
         // Mechanical Jump Boosts can be greater then Running as long as
         // the unit can handle the weight.
-        if ((mech.getJumpMP(false) > mech.getOriginalRunMPwithoutMASC())
+        if ((mech.getJumpMP(false) > mech.getOriginalRunMP())
                 && !mech.hasJumpBoosters()
                 && !mech.hasWorkingMisc(MiscType.F_PARTIAL_WING)) {
             buff.append("Jump MP exceeds run MP\n");
@@ -841,7 +850,7 @@ public class TestMech extends TestEntity {
     public double getArmoredComponentWeight() {
         double weight = 0.0;
 
-        for (int location = Mech.LOC_HEAD; location <= Mech.LOC_LLEG; location++) {
+        for (int location = Mech.LOC_HEAD; location < mech.locations(); location++) {
             for (int slot = 0; slot < mech.getNumberOfCriticals(location); slot++) {
                 CriticalSlot cs = mech.getCritical(location, slot);
                 if ((cs != null) && cs.isArmored()) {
@@ -1306,6 +1315,10 @@ public class TestMech extends TestEntity {
                                 || (((WeaponType)m.getType()).getAmmoType() == AmmoType.T_IGAUSS_HEAVY))) {
                     buff.append("LAMs cannot mount heavy gauss rifles.\n");
                     illegal = true;
+                } else if ((m.getType() instanceof MiscType)
+                        && m.getType().hasFlag(MiscType.F_CLUB)) {
+                    buff.append("LAMs cannot be constructed with physical weapons.\n");
+                    illegal = true;
                 } else if (m.getType().isSpreadable()) {
                     if (spread.containsKey(m.getType())) {
                         spread.get(m.getType()).add(m.getLocation());
@@ -1485,16 +1498,30 @@ public class TestMech extends TestEntity {
                 }
             }
         }
+        
+        for (Mounted m : mech.getWeaponList()) {
+            if (((WeaponType) m.getType()).getAmmoType() == AmmoType.T_IGAUSS_HEAVY) {
+                boolean torso = mech.locationIsTorso(m.getLocation());
+                if (m.getSecondLocation() != Entity.LOC_NONE) {
+                    torso = torso && mech.locationIsTorso(m.getSecondLocation());
+                }
+                if (!mech.isSuperHeavy() && !torso) {
+                    buff.append("Improved Heavy Gauss can only be mounted in a torso location.\n");
+                    illegal = true;
+                }
+            }
+            if ((m.getType().hasFlag(WeaponType.F_TASER)
+                    || m.getType().hasFlag(WeaponType.F_HYPER))
+                    && !(mech.hasEngine() && mech.getEngine().isFusion())) {
+                buff.append(m.getType().getName()).append(" needs fusion engine\n");
+                illegal = true;
+            }
+        }
 
-		if (mech.hasWorkingWeapon(WeaponType.F_TASER) && !(mech.hasEngine() && mech.getEngine().isFusion())) {
-			buff.append("Mek Taser needs fusion engine\n");
-			illegal = true;
-		}
-
-		if (mech.hasWorkingWeapon(WeaponType.F_HYPER) && !(mech.hasEngine() && mech.getEngine().isFusion())) {
-			buff.append("RISC Hyper Laser needs fusion engine\n");
-			illegal = true;
-		}
+        if (mech.hasWorkingWeapon(WeaponType.F_HYPER) && !(mech.hasEngine() && mech.getEngine().isFusion())) {
+            buff.append("RISC Hyper Laser needs fusion engine\n");
+            illegal = true;
+        }
         
         if (mech.hasFullHeadEject()) {
             if ((mech.getCockpitType() == Mech.COCKPIT_TORSO_MOUNTED)
