@@ -164,7 +164,7 @@ public class ArtilleryWeaponIndirectFireHandler extends AmmoWeaponHandler {
                         public Targetable targ = target;
 
                         public boolean accept(Entity entity) {
-                            Integer id = new Integer(entity.getId());
+                            Integer id = Integer.valueOf(entity.getId());
                             if ((player == entity.getOwnerId())
                                     && spottersBefore.contains(id)
                                     && !(LosEffects.calculateLos(game,
@@ -186,14 +186,14 @@ public class ArtilleryWeaponIndirectFireHandler extends AmmoWeaponHandler {
                 Entity ent = spottersAfter.next();
                 if (bestSpotter == null) {
                     bestSpotter = ent;
-                } else if (ent.getCrew().getOptions().booleanOption(OptionsConstants.MISC_FORWARD_OBSERVER)
-                        && !bestSpotter.getCrew().getOptions().booleanOption(OptionsConstants.MISC_FORWARD_OBSERVER)) {
+                } else if (ent.hasAbility(OptionsConstants.MISC_FORWARD_OBSERVER)
+                        && !bestSpotter.hasAbility(OptionsConstants.MISC_FORWARD_OBSERVER)) {
                     bestSpotter = ent;
                 } else if (ent.getCrew().getGunnery() < bestSpotter.getCrew().getGunnery()
-                        && !bestSpotter.getCrew().getOptions().booleanOption(OptionsConstants.MISC_FORWARD_OBSERVER)) {
+                        && !bestSpotter.hasAbility(OptionsConstants.MISC_FORWARD_OBSERVER)) {
                     bestSpotter = ent;
-                } else if (bestSpotter.getCrew().getOptions().booleanOption(OptionsConstants.MISC_FORWARD_OBSERVER)
-                        && ent.getCrew().getOptions().booleanOption(OptionsConstants.MISC_FORWARD_OBSERVER)) {
+                } else if (bestSpotter.hasAbility(OptionsConstants.MISC_FORWARD_OBSERVER)
+                        && ent.hasAbility(OptionsConstants.MISC_FORWARD_OBSERVER)) {
                     if (ent.getCrew().getGunnery() < bestSpotter.getCrew().getGunnery()) {
                         bestSpotter = ent;
                     }
@@ -205,7 +205,7 @@ public class ArtilleryWeaponIndirectFireHandler extends AmmoWeaponHandler {
         // If at least one valid spotter, then get the benefits thereof.
         if (null != bestSpotter) {
             int foMod = 0;
-            if (bestSpotter.getCrew().getOptions().booleanOption(OptionsConstants.MISC_FORWARD_OBSERVER)) {
+            if (bestSpotter.hasAbility(OptionsConstants.MISC_FORWARD_OBSERVER)) {
                 foMod = -1;
             }
             int mod = (bestSpotter.getCrew().getGunnery() - 4) / 2;
@@ -238,7 +238,7 @@ public class ArtilleryWeaponIndirectFireHandler extends AmmoWeaponHandler {
             else if ((null != bestSpotter) && !(this instanceof ArtilleryWeaponDirectFireHandler)) {
                 // only add mods if it's not an automatic success
                 if (ae.aTracker.getModifier(weapon, targetPos) != TargetRoll.AUTOMATIC_SUCCESS) {
-                    if (bestSpotter.getCrew().getOptions().booleanOption(OptionsConstants.MISC_FORWARD_OBSERVER)) {
+                    if (bestSpotter.hasAbility(OptionsConstants.MISC_FORWARD_OBSERVER)) {
                         ae.aTracker.setSpotterHasForwardObs(true);
                     }
                     ae.aTracker.setModifier(ae.aTracker.getModifier(weapon, targetPos) - 1, targetPos);
@@ -329,7 +329,7 @@ public class ArtilleryWeaponIndirectFireHandler extends AmmoWeaponHandler {
             // in the ArtilleryWeaponDirectFireHandler
             Coords origPos = targetPos;
             int moF = toHit.getMoS();
-            if (ae.getCrew().getOptions().booleanOption("oblique_artillery")) {
+            if (ae.hasAbility("oblique_artillery")) {
                 // getMoS returns a negative MoF
                 // simple math is better so lets make it positive
                 if ((-moF -2) < 1) {
